# Hookline

./: Cargo.toml  Dockerfile  PROD.md  README.md  config.yaml.example  docker-compose.yml
.claude/: settings.local.json
src/: config.rs  handler.rs  main.rs  notification.rs  server.rs
src/channels/: discord.rs  email.rs  mod.rs
